Update resume for 2013.
* Change theme to work with the moderncv package I have installed on my
  new machine.
* Update homepage to my github account.
* Change and comment out the objective. The original was too sappy.
* Update skills.
    Get rid of things I haven't used in a while. I haven't worked with
      Objective-C or PowerShell in forever. Nor do I expect to work with
      C++ in the near future. (never say never though)
    Comment out sections that are meaningless. Do Operating Systems and
      IDEs matter?
* Add things I've done at Backstop in last few years. I've probably
  forgotten a ton.
  Rewrite some of the items to make it clear how business benefited.
* Fix AgileTek section.
    Add mbox to prevent wrapping.
    Fix spacing in tex file.
* Add few interesting MOOCs I've taken.
* Get rid of activities I did in college and high school. I doubt anyone
  cares anymore about my participation in ICPC or the Web Design Club at
  this point.
* Add a few personal projects I've worked on recently. Primarily open
  source stuff, but also Lending Shak.
* Regenerate pdf from new tex source.

--- a/resume.tex
+++ b/resume.tex
@@ -1,8 +1,8 @@
 \documentclass[12pt,a4paper,roman]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
-\moderncvstyle{casual}                        % style options are 'casual' (default) and 'classic' 
-%\moderncvcolor{blue}                          % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+\moderncvstyle{classic}                        % style options are 'casual' (default) and 'classic' 
+\moderncvcolor{blue}                          % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\rmdefault}    % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 \usepackage{textcomp}
 
@@ -25,39 +25,45 @@
 %\phone{+2~(345)~678~901}                      % optional, remove the line if not wanted
 %\fax{+3~(456)~789~012}                        % optional, remove the line if not wanted
 \email{george@shakhnazaryan.com}                          % optional, remove the line if not wanted
-\homepage{www.shakhnazaryan.com}                    % optional, remove the line if not wanted
+\homepage{https://github.com/gshakhn}                    % optional, remove the line if not wanted
 %\extrainfo{additional information}            % optional, remove the line if not wanted
 %\photo[64pt][0.4pt]{picture}                  % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file; optional, remove the line if not wanted
-\quote{Objective: A technically challenging position in a team based environment that will help me improve myself and the world.}                 % optional, remove the line if not wanted
+%\quote{Objective: A technically challenging position in a team based environment.}                 % optional, remove the line if not wanted
 	
 \begin{document}
 \maketitle
 
 \section{Skills}
-\cvitem{Languages (Core)}{Java, JavaScript, C\#}
-\cvitem{Languages (Extra)}{Scala, Ruby, Lua, C, C++, Objective-C, PowerShell}
-\cvitem{Frameworks}{Stripes, jQuery, Thrift, Guice, \mbox{Hibernate}, .NET, log4j, ASP.NET, Spring.NET}
-\cvitem{TDD Tools}{JUnit, Fitnesse, RSpec, Selenium, Jasmine, js-test-driver}{
-\cvitem{Quality Tools}{Sonar, FxCop, Jenkins, \mbox{CruiseControl.NET}}
-\cvitem{Databases}{Oracle 11g, SQL Server 2008, HSQLDB 2.0}
-\cvitem{Operating Systems}{Linux, Windows, Mac OS X}
-\cvitem{Application Servers}{JBoss, Tomcat, IIS}
-\cvitem{IDEs}{IntelliJ, Visual Studio, Eclipse}
-\cvitem{Profilers}{YourKit, \mbox{EQATEC Profiler}}
+\cvitem{Core Languages}{Java, Scala, JavaScript}
+\cvitem{Extra Languages}{Ruby, C\#, Lua, C}
+\cvitem{Frameworks}{Stripes, Jersey, Scalatra, jQuery, Ember.js, Meteor, Guice, \mbox{Hibernate}, Slick}
+\cvitem{TDD Tools}{JUnit, ScalaTest, ScalaCheck, Fitnesse, RSpec, Selenium WebDriver, \mbox{page-object}, Jasmine, \mbox{js-test-driver}}{
+\cvitem{Quality Tools}{Sonar, FxCop, Scalastyle, scct, Jenkins, \mbox{CruiseControl.NET}}
+\cvitem{Databases}{Oracle 11g, SQL Server 2008, HSQLDB 2.0, H2}
 \cvitem{Source Control}{SVN, Git, Perforce}
-\cvitem{Other}{JRebel, Ant, Ivy, make, \mbox{MyGeneration}}
+\cvitem{Other}{JRebel, RabbitMQ, Ant, Ivy, sbt, maven, make}
+%\cvitem{Operating Systems}{Linux, Windows, Mac OS X}
+%\cvitem{Application Servers}{JBoss, Tomcat, IIS}
+%\cvitem{IDEs}{IntelliJ, Visual Studio, Eclipse}
+%\cvitem{Profilers}{YourKit, \mbox{EQATEC Profiler}}
 
 \section{Experience}
-\cventry{2010--Present}{Software Developer}{Backstop Solutions Group}{Chicago, IL}{}{Software as a service platform for hedge funds and fund of funds
+\cventry{2010--Present}{Software Engineer}{Backstop Solutions Group}{Chicago, IL}{}{Software as a service platform for hedge funds and fund of funds.
 \begin{itemize}
-  \item Maintained and improved main Accounting/CRM Java web platform following a Scrum/Kanban methodology.
-  \item Worked with project customers to write executable acceptance tests that caught numerous bugs during project development and subsequent maintenance.
+  \item Maintained and improved main Accounting/CRM Java web platform following Scrum and Kanban methodologies.
+  \item Worked with product owners to write executable acceptance tests that caught numerous bugs during project development and subsequent maintenance.
+  \item Collaborated with product owners to figure out project priorities.
+  \item Trained new team members on platform and team processes.
   \item Deployed and monitored software in production.
-  \item Created scalable services to sync email from Exchange 2007/2010 and IMAP servers.
-%  \item Developed Portfolio Planning module with comprehensive tests and relatively few bugs.
+  \item Developed separate accounting service to make business logic more traceable.
+  \item Created scalable services to sync email from Exchange 2007/2010 and IMAP servers. The new services made syncing errors easier to diagnose.
   \item Integrated Fitnesse with build process. Promoted writing integration tests and assisted team members in test writing.
-  \item Setup and maintained local Sonar installation for static analysis of codebase.
-  \item Integrated js-test-driver with build process in order to add JavaScript testing to platform.
+  \item Integrated js-test-driver with build process. This allowed us to test our JavaScript business logic separately from the web portion.
+  \item Added new functionality and fixed bugs in page-object, an external Ruby gem that provides a  DSL for browser testing. page-object helped us write more maintainable and readable tests.
+  \item Wrote and helped others write RSpec tests using Selenium WebDriver and page-object.
+  \item Modified RSpec test runner to record videos of browser tests. This made diagnosing test failures easier.
+  %\item Setup and maintained local Sonar installation for static analysis of codebase.
+  \item Setup Vagrant recipe for development environment. This cut new developer setup time in half.
 \end{itemize}
 }
 \cventry{2008-2010}{Software Developer}{AgileTek LLC}{Des Plaines, IL}{}{Custom software development firm specializing in high risk projects
@@ -68,40 +74,35 @@
       \item Created a printing framework utilizing .NET printing to print reports. Designed and created reports using framework.
       \item Architected migration process of legacy data to new schema.
     \end{itemize}
-  \item Created an online payment portal using ASP.NET Web Forms for auto insurance agencies, which thousands of customers use to pay for their auto insurance.
+  \item Created an online payment portal using ASP.NET Web Forms for auto \mbox{insurance} agencies, which thousands of customers use to pay for their auto insurance.
     \begin{itemize}
       \item Defined the client's objective and brainstormed ways of meeting the objective.
       \item Designed MS SQL Server database schema.
-     \item Created FTP application to download payment records from a payment processor.
+      \item Created FTP application to download payment records from a payment processor.
       \item Integrated multiple 3rd party software packages to ease client workflow.
       \item Setup SVN server and assisted team members in accessing source control.
     \end{itemize}
 \end{itemize}}
 
 \section{Education}
+\cventry{2012}{Functional Programming Principles in Scala}{coursera.org}{}{}{An online course taught by Scala designer Martin Odersky}
+\cventry{2012}{Artificial Intelligence for Robotics}{udacity.com}{}{}{An online course taught by Stanford professor Sebastian Thrun}
 \cventry{2011}{Introduction to Artificial Intelligence}{ai-class.com}{}{}{An online course taught by Stanford professors Peter Norvig and Sebastian Thrun}
 \cventry{2006--2008}{Bachelor of Science}{University of Illinois at Chicago}{}{\textit{3.66/4.00}}{Major: Computer Science}
 
-\section{Activities}
-\cventry{2007}{Member}{UIC ACM International Collegiate Programming Contest Team}{}{}{Ranked 18 of 112 in Mid-Central USA Region}
-\cventry{2004-2006}{President}{Web Design Club/Team}{}{}{
-\begin{itemize}
-  \item Created websites for school activities.
-  \item Competed in 36th Annual Graphic Arts Institute of Technology Printing Contest
-  \begin{itemize}
-    \item Best in Show
-    \item First Place Group, Level II, Web Design
-  \end{itemize}
-\end{itemize}
+\section{Personal Projects}
+\cventry{}{sonar-intellij-plugin}{}{}{}{
+  Plugin for IntelliJ IDE that connects to a Sonar server and shows code violations. Downloaded by 3000+ developers.
 }
-\cventry{2002-2004}{Member}{Web Design Club/Team}{}{}{}{}
-\cventry{2002-2006}{Member}{Mathematics Team}{}{}{
-\begin{itemize}
-  \item Consistently High Scorer
-  \item Participated in State Contest
-  \item Qualified for the American Invitational Mathematics Examination
-  \item Participated in USAMTS
-\end{itemize}}
+\cventry{}{idea-fitnesse}{}{}{}{
+  Plugin for IntelliJ IDE that adds Fitnesse test support. Currently in development.
+}
+\cventry{}{Lending Shak}{}{}{}{
+  Android app that connects to a Prosper account to show balances and notes.
+}
+\cventry{}{checkin}{}{}{}{
+  Meteor app that helps team members share status updates.
+}
 
 %\section{Languages}
 %\cvitem{English}{Fluent}
