--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 %\mobile{+1~(847)~555~5555}                     % optional, remove the line if not wanted
 %\phone{+2~(345)~678~901}                      % optional, remove the line if not wanted
 %\fax{+3~(456)~789~012}                        % optional, remove the line if not wanted
-\email{george@shakhnazaryan.com}                          % optional, remove the line if not wanted
+\email{gshakhn@gmail.com}                          % optional, remove the line if not wanted
 \homepage{https://www.gshakhn.com}                    % optional, remove the line if not wanted
 %\extrainfo{additional information}            % optional, remove the line if not wanted
 %\photo[64pt][0.4pt]{picture}                  % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file; optional, remove the line if not wanted
