--- a/resume.tex
+++ b/resume.tex
@@ -88,9 +88,10 @@
 \end{itemize}}
 
 \section{Education}
-\cventry{2012}{Functional Programming Principles in Scala}{coursera.org}{}{}{An online course taught by Scala designer Martin Odersky}
-\cventry{2012}{Artificial Intelligence for Robotics}{udacity.com}{}{}{An online course taught by Stanford professor Sebastian Thrun}
-\cventry{2011}{Introduction to Artificial Intelligence}{ai-class.com}{}{}{An online course taught by Stanford professors Peter Norvig and Sebastian Thrun}
+\cventry{2014}{Principles of Reactive Programming}{coursera.org}{}{}{}
+\cventry{2012}{Functional Programming Principles in Scala}{coursera.org}{}{}{}
+%\cventry{2012}{Artificial Intelligence for Robotics}{udacity.com}{}{}{An online course taught by Stanford professor Sebastian Thrun}
+%\cventry{2011}{Introduction to Artificial Intelligence}{ai-class.com}{}{}{An online course taught by Stanford professors Peter Norvig and Sebastian Thrun}
 \cventry{2006--2008}{Bachelor of Science}{University of Illinois at Chicago}{}{\textit{3.66/4.00}}{Major: Computer Science}
 
 \section{Personal Projects}
